extra_example_for_peaksix/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngnix-app
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    resources: {}
