extra_example_for_peaksix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
    protocol: TCP
